--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@refinedev/simple-rest": "^5.0.1",
     "antd": "^5.0.5",
     "axios": "^1.6.2",
+    "axios-auth-refresh": "^3.3.6",
     "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
